Data Driven Website + Basic CSS Styling

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,95 @@
 body {
   margin: 0;
-  font-family: "Inter", sans-serif
+  font-family: "Inter", sans-serif;
+  background-color: rgb(255, 255, 255);
 }
 
+.navbar {
+  margin: 0;
+  background-color: #1654ff;
+  color: white;
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+}
+
+.navbar > p{
+  padding: 1%;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 18px;
+  justify-content: center;
+  justify-self: center;
+}
+
+.app {
+  margin: 0;
+}
+
+.card {
+  display: flex;
+  width: 800px;
+  height: 185px;
+  justify-content: center;
+  justify-items: center;
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px;
+  margin: 5px;
+  color: rgb(0, 0, 0);
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.card-img {
+  width: 125px;
+  height: 168px;
+  left: 40px;
+  top: 100px;
+  border-radius: 20px;
+  padding: 1%;
+}
+
+.card-location {
+  display: flex;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 12px;
+  letter-spacing: 0.17em;
+  justify-content: left;
+}
+
+.card-location > a {
+  padding-top: 1.5%;
+  padding-left: 1%;
+}
+
+.card-title {
+  font-family: Inter;
+  font-size: 25px;
+  font-weight: 700;
+  line-height: 30px;
+  letter-spacing: 0em;
+  text-align: left;  
+}
+
+.card-dates {
+  font-family: Inter;
+  font-size: 10px;
+  font-weight: 700;
+  line-height: 12px;
+  letter-spacing: 0em;
+  text-align: left;  
+}
+
+.card-body {
+  font-family: Inter;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 15px;
+  letter-spacing: 0em;
+  text-align: left;  
+  word-wrap: normal;
+}
+
+br {
+  border-bottom:1px dashed black;
+}
